--- a/css/main.scss
+++ b/css/main.scss
@@ -663,3 +663,9 @@ section.empty {
     margin-top: 20px;
   }
 }
+
+.addButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
