--- a/css/main.css
+++ b/css/main.css
@@ -432,3 +432,13 @@ section.empty {
   display: flex;
   flex-direction: column;
   justify-content: center; }
+
+.notice {
+  text-align: center;
+  color: #155724;
+  background-color: #d4edda;
+  border: 1px solid #c3e6cb;
+  padding: 2rem 1rem 1rem;
+  border-radius: 4px;
+  margin: 0 1rem 1rem;
+}
