Add and update notices

--- a/css/main.css
+++ b/css/main.css
@@ -442,3 +442,9 @@ section.empty {
   border-radius: 4px;
   margin: 0 1rem 1rem;
 }
+
+.notice.red {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
