--- a/css/main.scss
+++ b/css/main.scss
@@ -678,4 +678,10 @@ section.empty {
   padding: 2rem 1rem 1rem;
   border-radius: 4px;
   margin: 0 1rem 1rem;
+
+  &.red {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+  }
 }
