--- a/css/main.scss
+++ b/css/main.scss
@@ -672,16 +672,27 @@ section.empty {
 
 .notice {
   text-align: center;
-  color: #155724;
-  background-color: #d4edda;
-  border: 1px solid #c3e6cb;
+  color: #383d41;
+  background-color: #e2e3e5;
+  border: 1px solid #d6d8db;
   padding: 2rem 1rem 1rem;
   border-radius: 4px;
   margin: 0 1rem 1rem;
+}
 
-  &.red {
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
-  }
+.btn-outline-success {
+  border: 1px solid #73c619;
+  color: #73c619;
+  background: none;
+  text-transform: uppercase;
+}
+
+// Utility classes in correspondance with https://tailwindcss.com.
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.w-full {
+  width: 100%;
 }
