--- a/css/main.scss
+++ b/css/main.scss
@@ -639,10 +639,6 @@ ul.question-list {
       }
     }
   }
-
-  .name-section {
-    display: none;
-  }
 }
 
 .topic-list {
@@ -695,6 +691,61 @@ section.empty {
     width: auto;
   }
 }
+
+// Addition of category folders:
+
+
+.add-story-view .topic-buttons a {
+  display: block;
+  line-height: 1.2;
+  height: 100px;
+  padding: 5px 2px;
+  background-color: #73c619;
+  border: 1px solid #979797;
+  text-align: center; 
+  /* Overrides display: block if flexbox styling is supported */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.add-story-view .name-section {
+  display: block;
+}
+
+.topic-buttons.stacked li {
+  position: relative;
+}
+
+.topic-buttons.stacked li a {
+  position: relative;
+  z-index: 3;
+}
+
+.topic-buttons.stacked li::before {
+  content: 'xxx';
+  position: absolute;
+  z-index: 1;
+  top: 6px;
+  left: 6px;
+  width: 100%;
+  height: 100%;
+  background-color: #69a626;
+  border: 1px solid #73c619;
+} 
+
+.topic-buttons.stacked li::after {
+  content: 'xxx';
+  position: absolute;
+  z-index: 2;
+  top: 3px;
+  left: 3px;
+  width: 100%;
+  height: 100%;
+  background-color: #69a626;
+  border: 1px solid #73c619;
+} 
+
 
 // Utility classes in correspondance with https://tailwindcss.com.
 
