--- a/css/main.css
+++ b/css/main.css
@@ -82,8 +82,10 @@ body {
 
 #viewport article.with-header {
   padding-top: 60px; }
+
 #viewport article {
   padding-bottom: 60px; }
+
 #viewport article.free-text {
   padding-left: 15px;
   padding-right: 15px; }
@@ -156,6 +158,7 @@ body {
   margin-left: -5px;
   margin-right: -5px;
   background-color: #f5f6f6; }
+
 .box-sections h2 {
   margin: 5px 0px 10px 5px;
   font-size: 16px; }
@@ -168,10 +171,13 @@ body {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
+
 .collapsible-sections > section > h2::before {
   content: "\f077"; }
+
 .collapsible-sections > section > h2.collapsed::before {
   content: "\f078"; }
+
 .collapsible-sections > section > h2:hover {
   cursor: pointer; }
 
@@ -269,6 +275,7 @@ ul.question-list {
 
 .story-view article.with-header {
   padding-top: 80px !important; }
+
 .story-view #story-progress {
   position: fixed;
   top: 50px;
@@ -279,6 +286,7 @@ ul.question-list {
   .story-view #story-progress .progress {
     border-radius: 0px;
     margin: 0px -15px; }
+
 .story-view .story-done {
   display: none;
   padding: 20px 0px;
@@ -412,8 +420,6 @@ ul.question-list {
       font-size: 32px;
       margin-top: 0px;
       margin-bottom: 5px; }
-.add-story-view .name-section {
-  display: none; }
 
 .topic-list {
   width: 100%; }
@@ -440,32 +446,71 @@ section.empty {
   border: 1px solid #d6d8db;
   padding: 2rem 1rem 1rem;
   border-radius: 4px;
-}
+  margin: 0 1rem 1rem; }
+
+.btn-outline-success {
+  border: 1px solid #73c619;
+  color: #73c619;
+  background: none;
+  text-transform: uppercase; }
 
 .submit-button {
   width: 100%;
-  margin-bottom: 1rem;
-}
+  margin-bottom: 1rem; }
+  @media screen and (min-width: 550px) {
+    .submit-button {
+      width: auto; } }
 
-@media screen and (min-width: 550px) {
-  .submit-button {
-    width: auto;
-    margin-right: 0.5rem;
-  }
-}
+.add-story-view .topic-buttons a {
+  display: block;
+  line-height: 1.2;
+  height: 100px;
+  padding: 5px 2px;
+  background-color: #73c619;
+  border: 1px solid #979797;
+  text-align: center;
+  /* Overrides display: block if flexbox styling is supported */
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.add-story-view .name-section {
+  display: block; }
+
+.topic-buttons.stacked li {
+  position: relative; }
+
+.topic-buttons.stacked li a {
+  position: relative;
+  z-index: 3; }
+
+.topic-buttons.stacked li::before {
+  content: 'xxx';
+  position: absolute;
+  z-index: 1;
+  top: 6px;
+  left: 6px;
+  width: 100%;
+  height: 100%;
+  background-color: #69a626;
+  border: 1px solid #73c619; }
+
+.topic-buttons.stacked li::after {
+  content: 'xxx';
+  position: absolute;
+  z-index: 2;
+  top: 3px;
+  left: 3px;
+  width: 100%;
+  height: 100%;
+  background-color: #69a626;
+  border: 1px solid #73c619; }
 
 .uppercase {
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .w-full {
-  width: 100%;
-}
+  width: 100%; }
 
 .mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
+  margin-bottom: 3rem; }
