--- a/css/main.css
+++ b/css/main.css
@@ -485,7 +485,7 @@ section.empty {
   z-index: 3; }
 
 .topic-buttons.stacked li::before {
-  content: 'xxx';
+  content: '';
   position: absolute;
   z-index: 1;
   top: 6px;
@@ -496,7 +496,7 @@ section.empty {
   border: 1px solid #73c619; }
 
 .topic-buttons.stacked li::after {
-  content: 'xxx';
+  content: '';
   position: absolute;
   z-index: 2;
   top: 3px;
@@ -505,6 +505,48 @@ section.empty {
   height: 100%;
   background-color: #69a626;
   border: 1px solid #73c619; }
+
+.add-story-view .topic-buttons li.is-custom a {
+  background: #797979;
+  border-color: #5a5a5a; }
+
+.add-story-view .topic-buttons li.is-custom::before {
+  background: #797979;
+  border-color: #5a5a5a; }
+
+.add-story-view .topic-buttons li.is-custom::after {
+  background: #797979;
+  border-color: #5a5a5a; }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+.loading {
+  margin: 30px auto;
+  width: 60px;
+  height: 60px;
+  border: 4px solid #73c619;
+  border-left-color: transparent;
+  border-radius: 50%;
+  animation-name: spin;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; }
+
+.loading-text {
+  margin-top: 20px;
+  color: #73c619;
+  text-align: center; }
+
+.loading-text.has-error {
+  color: red;
+  text-align: center; }
+
+.underline {
+  text-decoration: underline; }
 
 .uppercase {
   text-transform: uppercase; }
